# llmsim

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README_ch.md  ds_prefill.sh  optimize_ds_decode.sh  optimize_ds_prefill.sh  optimize_qwen3.sh  prefill_result.xlsx  pyproject.toml  requirements.txt  usage.sh
docs/: auto_generator_design.md  model_config_file_load.md  model_coverage.md
examples/: autogen_qwen.py  autogen_qwen_config.py  generate_from_sglang.py
hardware_config/: default_gpu.json  default_gpu.json5  gb200.json  gb200.json5  h20.json  h20.json5  h800.json  h800.json5  klx_p800.json  klx_p800.json5
hf_config/: Qwen__Qwen2-7B.json  Qwen__Qwen2.5-7B.json  THUDM__glm-4-9b-chat.json  THUDM__glm-4-9b.json  deepseek-ai__DeepSeek-V2-Lite.json  deepseek_671b_r1_config.json  microsoft__Phi-3-mini-4k-instruct.json  microsoft__phi-4.json  mistralai__Mistral-7B-v0.1.json  mistralai__Mixtral-8x22B-v0.1.json  mistralai__Mixtral-8x7B-v0.1.json  modelscope__AI-ModelScope__gemma-2-2b.json  modelscope__AI-ModelScope__gemma-2-9b.json  modelscope__AI-ModelScope__gemma-2b.json  modelscope__LLM-Research__Meta-Llama-3-8B.json  modelscope__modelscope__Llama-2-7b-chat-ms.json  qwen3-235B-A22B_config.json  qwen3-30B-A3B_config.json  qwen3-next-80B-A3B_config.json
metrics/: qwen3-32B_prefill.xlsx
python/: server_args.py
python/config/: model_config.py
python/hardware/: chip.py
python/models/: model.py
src/: main.py
src/arch/: config.py  configs_remote_loader.py  huggingface_configs.py  model_type.py  perf_calculator.py  report_formatter.py
src/arch/models_arch/: auto_generator.py  base_model_arch.py  deepseek_v3_model_arch.py  model_arch.py  qwen3_moe_model_arch.py  simple_model_arch.py
src/arch/models_arch/auto/: __init__.py  adapter.py  config_builder.py  ir.py  parser.py  transformer.py
src/arch/models_arch/auto/layer_parsers/: __init__.py  attention.py  base.py  linear.py  moe.py  norm.py  (+1 more)
src/arch/op/: attn_op.py  ffn_op.py  matmul_op.py  mla_attn_op.py  op_register.py  operator_base.py  transfer_op.py
src/arch/op/network_communication/: network_comm.py
src/arch/perf/: layer_perf.py  model_info.py  model_perf.py  op_perf.py
src/hardware/: hardware_config.py
src/layers/: attn.py  decode_block.py  ffn.py
src/llmsim/lib/configs/: __init__.py  huggingface_configs.py
src/optimization/: __init__.py  cli.py  config.py  constraints.py  evaluator.py  objective.py  results.py  search_space.py  service.py
src/optimization/optimizers/: __init__.py  base.py  grid_search.py
src/visual/: console_report.py  excel_report.py  report_base.py
tests/: __init__.py  test_auto_adapter.py  test_auto_generator.py  test_config_builder.py  test_model_coverage.py  test_tp_comparison.py
