[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsim"
version = "0.1.0"
description = "LLM 推理性能分析工具"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "zkkython"},
]
keywords = ["llm", "inference", "performance", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pytest",
    "json5",
    "openpyxl",
    "huggingface-hub==1.4.0",
    "socksio==1.0.0",
    "httpx==0.28.1",
    "modelscope==1.34.0",
]

[project.optional-dependencies]
generator = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
dev = [
    "pytest",
    "pre-commit",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.scripts]
llmsim = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.json5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUndefinedVariable = true
